<?xml version="1.0"?>
<package format="2">
  <name>radar_ego_velocity_estimation</name>
  <version>1.0.0</version>
  <description>The radar_ego_velocity_estimation package provides a least squares radar based ego velocity estimation.</description>

  <maintainer email="Christopher.Doer@kit.edu">Christopher Doer</maintainer>

  <license>GPLv3</license>

  <!-- <url type="website">http://wiki.ros.org/radar_ego_velocity_estimation</url> -->

  <author email="christopher.doer@kit.edu">Christopher Doer</author>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  
  <depend>rosbag</depend>
  <depend>roscpp</depend>	
  <depend>angles</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>
  <depend>pcl_ros</depend>

  <depend>rio_utils</depend>

  <export>
  </export>
</package>
